Bug: Done button covers last Mood Category on Create New Card. BUG: (sporadically) can't click Done on add categories

--- a/src/app/views/scss/newcard.scss
+++ b/src/app/views/scss/newcard.scss
@@ -84,9 +84,11 @@
 .newcard.confirmOrCancel {
   background: $gray;
   border-top: 1px solid darken($gray, 10%);
+  z-index: 10;
 }
 
 .newcard.confirmOrCancel__btn {
   text-align: center;
   color: $white;
+  z-index: 11;
 }
